Fixed Card Overflow

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,13 +3,16 @@
     flex-direction: column;
     padding: 15px;
     border-radius: 15px;
-    min-height: 150px;
-    max-height: 180px;
+    /* min-height: 150px; */
+    max-height: 100%;
+    height: 200px;
     width: 300px;
     gap: 25px;
     background-color: #f2f2f2;
-    transition: box-shadow 0.3s ease, transform 0.3s ease; /* Agrega una transición suave para ambos efectos */
-}
+    align-items: stretch;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+  }
+  
 
 .HouseCard:hover {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Agrega una sombra al hacer hover */
