--- a/src/pages/Admin/Houses.module.css
+++ b/src/pages/Admin/Houses.module.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     grid-gap: 10px; 
-    grid-row-gap: 5px; 
+    grid-row-gap: 15px; 
     padding: 25px;
     height: 100%;
     width: 100%;
