--- a/src/pages/Admin/Services.module.css
+++ b/src/pages/Admin/Services.module.css
@@ -3,9 +3,9 @@
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     grid-gap: 10px; 
-    grid-row-gap: 5px; 
+    grid-row-gap: 50px; 
     padding: 25px;
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     overflow-y: auto;
     margin-left: 25px; 
